# SensorCalibrator

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_REVIEW_REPORT.md  OPTIMIZATION-REPORT.md  README.md  StableSensorCalibrator.py  StableSensorCalibrator.py.backup.sprint5  activation.py  bare-except-fix-plan.md  calibration.py  calibration_params.json  code-cleanup-plan.md  code-review-fixes-plan.md  data_pipeline.py  findings.md  fix-code-review-issues-plan.md  main-file-refactoring-plan.md  main.py  network_config.py  progress.md  project-improvement-plan.md  pyproject.toml  pytest.ini  read_docx.py  requirements.txt  sensor_properties.json  serial_manager.py  skills-lock.json  task_plan.md
.agents/: AGENTS.md
.sisyphus/: boulder.json
archive/: StableSensorCalibrator.py.bak
backups/: data_buffer.py.backup  data_processor.py.backup  serial_manager.py.backup
benchmarks/: benchmark_phase1.py  benchmark_phase2.py  benchmark_phase3.py  benchmark_phase4.py
docs/: dependency-analysis.md  refactoring-summary.md
plan/: README.md  add-missing-commands-plan.md  aky-length-consistency-plan.md  application-analysis.md  calibration-ui-implementation-summary.md  calibration-ui-optimization-plan.md  calibration-ui-test-report.md  code-fixes-plan.md  code-review-fixes-plan.md  dependency-analysis.md  detailed-fixes-plan.md  detailed-implementation-plan.md  fix-calibration-status-detection.md  fix-calibration-ui-layout-plan.md  fix-device-info-display-plan.md  fix-disconnect-dialog-timing.md  fix-disconnect-dialog-v2.md  fix-read-calibration-params.md  progress.md  ui-fix-plan.md  (+17 more)
(+74 files in other folders)
